[package]
name = "equeue"
version = "0.1.0"
authors = ["Kirill Gusakov <kgusakov@gmail.com>"]
edition = "2018"

[lib]
name = "equeue"           # The name of the target.
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.22", features = ["sync"]}

[dev-dependencies]
tempfile = "3.1.0"
