[package]
name = "pchannel"
version = "0.1.0"
authors = ["Kirill Gusakov <kgusakov@gmail.com>"]
edition = "2018"

[lib]
name = "pchannel"           # The name of the target.
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.22", features = ["sync"]}
serde = {version = "1.0.114"}
bincode = "1.3.1"
thiserror = "1.0.20"

[dev-dependencies]
tempfile = "3.1.0"
proptest = "0.10.0"
tokio = {version = "0.2.22", features = ["rt-core"]}
futures = "0.3.5"
